--- a/NetflixCop/src/App.css
+++ b/NetflixCop/src/App.css
@@ -1,7 +1,6 @@
 * {
   margin: 0px;
   padding: 0px;
-
 }
 
 html,body, .cover {
@@ -13,8 +12,9 @@ html,body, .cover {
 .cover {
   background: url("./img/Fondo.jpg");
   background-color:none;
- 
-  height: 100%;
+}
+hr{
+  border-color: black;
 }
 
 section{
@@ -100,6 +100,10 @@ button{
   border-radius: 5px;
  border-style: none;
  font-size: 1.5rem;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+
 }
 
 form{
@@ -210,3 +214,83 @@ form{
   -ms-flex-negative: 0;
   flex-shrink: 0;
 }
+
+
+
+/*preguntas*/
+.preguntas{
+  display: flex;
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  position: relative;
+  padding: 50px;
+  top: 50px;
+  top: 730px;
+  background: black;
+  margin-top: 5px  ;
+}
+.divpreguntas{
+  width: 80%;
+}
+.subtitu{
+  font-size: 3rem;
+  font-weight: 900;
+  padding: 20px;
+  
+}
+
+.lh3{
+
+  background-color:#2d2d2d;
+  padding: 10px;
+  transition: all 0.4s cubic-bezier(0.5, 0, 0.1, 1) 0s;
+
+}
+.bott{
+      appearance: none;
+      background: none;
+      font: inherit;
+      letter-spacing: inherit;
+      line-height: inherit;
+      margin: 0;
+      padding: 0;
+      text-decoration: none;
+      width: 100%;
+      background: none;
+      border: none;
+      cursor: pointer;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      justify-content: space-between;
+      -ms-flex-align: center;
+      align-items: center;
+      color: inherit;
+      font-family: inherit;
+      font-size: inherit;
+      text-align: left;
+      padding: 1.5rem;
+}
+
+.contenPregun{
+font-size: 1.5rem;
+max-height: 75rem;
+padding-bottom: 1.5rem;
+padding-top: 1.5rem;
+overflow: hidden;
+padding: 0px 1.5rem;
+transition: all 0.4s cubic-bezier(0.5, 0, 0.1, 1) 0s;
+text-align: left;
+background-color: rgb(45, 45, 45);
+color: rgb(255, 255, 255);
+
+padding: 25px;
+}
+
+li{list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-indent: 0;
+  margin: 0 0 0.5rem 0;}
+/*preguntas*/
